# ngs_pipeline

./: .gitattributes  .gitignore  README.md  meson.build  meson_options.txt  miniwdl.cfg
app/: .gitignore  app.py  constants.py  couchdb_api.py  filemaker_api.py  meson.build  pyproject.toml  readme.md  run_app.sh  run_couchdb.sh  run_rabbitmq.sh  run_registry.sh  samplesheet.py
app/containers/: build.sh  ngs_pipeline.containerfile  ngs_pipeline_tests.containerfile  ngs_pipeline_worker.containerfile  run_ngs_pipeline_worker.sh
app/couchdb_api/: __init__.py  couchdb_api.py  couchdb_api_test.py
app/scripts/: build_containers.sh  run_app.sh  run_couchdb.sh  run_ngs_pipeline_container_in_pod.sh  run_rabbitmq.sh  run_tests.sh
app/src/: __init__.py
app/src/app/: app.py  config.py  constants.py  db.py  db_utils.py  domain_model.py  filemaker_api.py  model.py  parsers.py  samplesheet.py  tasks.py  tasks_impl.py  tasks_utils.py  ui.py  workflow_backends.py
app/src/app/templates/: pipeline_dashboard.html  raw_db_document.html  raw_db_view.html  samplesheet_template.csv  tracking_form.html
app/templates/: pipeline_dashboard.html  tracking_form.html
app/testing_couchdb_pb/: run_couchdb_pb.sh
app/testing_couchdb_pb/couchini/: docker.ini
app/tests/: conftest.py  test_app.py  test_db.py  test_filemaker_api.py  test_parsers.py  test_tasks.py  test_tasks_impl.py  test_tasks_utils.py  test_ui.py  test_workflow_backends.py
app/tests/functional/: test_app.py
app/tests/unittests/: test_db.py  test_filemaker_api.py  test_parsers.py  test_tasks.py
clcwrapper/: .gitignore  Dockerfile  build.sh  readme.md
cnv/: Dockerfile  build.sh  run.sh  run_purecn.sh
cnv/cnvkit/: cnvkit_batch.sh  run_cnvkit_container.sh
cnv/purecn/: Dockerfile  build.sh  run.sh  run_purecn.sh
compliance/: blacklist_files  blacklist_mimetypes  meson.build  readme.md  security_check_file.py  sensitive_data_check.py  whitelist_files
continuous_deployment/: README.md  continuous_deploy.service  continuous_deploy.timer  meson.build  systemd_enable.sh  update_pipeline.sh
devtools/: tmux_dev.sh
dnpm/: mock_genetischer_Kerndatensatz_DNPM.txt
docs/: README.md  ]  activity_diagram.puml  automation_diagram.puml  current_workflow.puml  host_local_container_registry.md  pathology_dashboard.feature  system_diagram.puml  usecase_diagram.puml
folder_remap/: Dockerfile  README.md  folder_remap.conf.sample  folder_remap.service  folder_remap.sh  folder_remap.timer  install.sh  meson.build  readme.md  remap.feature  test.sh  uninstall.sh
folder_remap/test/: folder_remap.conf
git_hooks/: pre-commit
testing_couchdb_pb/: run_couchdb_pb.sh
testing_couchdb_pb/DNPM/: dummyDNPMdataset_generator.py
workflow/: readme  readme.md
workflow/RSkripts_NGS/: DNA_Lunge_v1_debugging.R
workflow/nextflow/: .containerignore  Dockerfile  build.sh  containerbuild  nextflow_container.containerfile  nextflow_run_wrapper  readme.md  run.sh
workflow/nextflow/modules/: meson.build  readme.md  test.nf
workflow/nextflow/modules/arriba_nextflow/: main.nf  meson.build
workflow/nextflow/modules/clc_and_variantinterpretation/: main.nf  nextflow.config
workflow/nextflow/modules/clc_nextflow/: main.nf  meson.build
workflow/nextflow/modules/ukb_main_workflow/: main.nf  meson.build
workflow/process_variantlists/R/: BRCAness_v3.R  OncoHS_v1_debugging.R
workflow/process_variantlists/python/process_csv/: process_DNALunge_table.py  process_variantlists_utils.py
workflow/process_variantlists/python/process_xlsx/: process_BRCAness_table.py  process_OncoHS_table.py  process_variantlists_utils.py
workflow/processing_variantlists/python/: functions_processing_variantlists.py  processing_BRCAness_csv.py  processing_OncoHS_csv.py  processing_variantlists.py
workflow/processing_variantlists/python_xlsx/: processing_DNALunge_xlsx.py  processing_OncoHS_xlsx.py
workflow/processing_variantlists/python_xlsx_test/: functions_processing_variantlists_xlsx_check.py  processing_variantlists_TP_check_fil_sheets_xlsx.py
workflow/snakemake/: build.sh  readme.md  run_snakemake.sh  snakemake_pipeline.service  snakemake_pipeline.timer
workflow/wdl/: Dockerfile  Dockerfile_vep  build.sh  clc_loung_workflow.wdl  clc_test.wdl  cnv.wdl  filters.txt  install_miniwdl.sh  learn.wdl  meson.build  miniwdl.config  nNGM_lungenpanel.wdl  readme.md  run_cnv_wdl.sh  run_vep_wdl.sh  run_wdl.sh  test.wdl  vep.wdl
workflow/wdl/clc_workflows/: clc_loung_workflow.wdl
workflow/wdl/pancancer_wdl/: Dockerfile  pancancer_vep.cfg  runveppan.sh  vep_pancancer.wdl  veppan.wdl
