[build-system]
requires = [
  "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "ngs_pipeline"
version = "0.0.1"
dependencies = [
"gunicorn",
"flask",
"requests",
"pycouchdb",
"celery",
"pytest",
"pyparsing",
"click",
"pandas",
"pydantic",
"more_itertools",
"miniwdl @ git+https://github.com/chanzuckerberg/miniwdl.git",
"pytest-celery",
"mypy",
"pep8",
"responses",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
markers = [
    "incremental"
    ]

[project.scripts]
ngs_pipeline = "app.app:main"

