[build-system]
requires = [
  "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "ngs_pipeline"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
	"gunicorn",
	"flask",
	"requests",
	"pycouchdb",
	"celery",
	"pyparsing",
	"click",
	"pandas",
	"pydantic",
	"more_itertools",
]

[project.optional-dependencies]
test = [
	"pytest",
	"pytest-celery",
	"mypy",
	"pep8",
	"responses",
	"coverage",
	"build",
	]
miniwdl = ["miniwdl @ git+https://github.com/chanzuckerberg/miniwdl.git"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
markers = [
    "incremental",
    "unit",
    "slow",
    "integration"
    ]
testpaths = [
    "tests"
    ]


[project.scripts]
ngs_pipeline = "app.app:main"

